[package]
name = "v2ex-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
html5ever = "*"
# crossterm = "0.20"
# tui = { version = "0.16", default-features = false, features = ['crossterm'] }

# [dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"